2012-04-04  6.7.6-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.6-4, SVN revision 7356.

2012-04-01  6.7.6-4 Cristy  <quetzlzacatenango@image...>
  * Properly set the XCF alpha channel values (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20642).
  * Support 'orientation' property (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=20650).
  * The default RGB colorspace transform is now linear (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?p=82839#p82839).
  * Prevent EXIF integer overflow (CVE-2012-1610).

2012-03-30  6.7.6-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.6-3, SVN revision 7290.

2012-03-29  6.7.6-3 Cristy  <quetzlzacatenango@image...>
  * Don't copy invalid memory when reading TIFF EXIF IFD (CERT-FI case 634116,
    CVE-2012-1798).
  * Bail if we receive excessive JPEG warnings (CERT-FI case 634117,
    CVE-2012-0260).
  * Properly initialize EXIF buffers to prevent JPEG EXIF tag crash (CERT-FI
    case 634118, CVE-2012-0259).

2012-03-28  6.7.6-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.6-2, SVN revision 7245.

2012-03-26  6.7.6-2 Anthony Thyssen <A.Thyssen@griffith...>
  * Added "Nearest" as a synonym for "Nearest-Neighbor" iterpolate setting

2012-03-21  6.7.6-2 Glenn Randers-Pehrson <glennrp@image...>
  * coders/png.c: stored "file_gamma" for later use by identify.

2012-03-19  6.7.6-2 Cristy  <quetzlzacatenango@image...>
  * Add full support for Pango markup.
  * Pango namespace is 'pango:', not 'caption:'.
  * Correct for EXR images with broken display windows.

2012-03-18  6.7.6-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.6-1, SVN revision 7145.

2012-03-16  6.7.6-1 Glenn Randers-Pehrson <glennrp@image...>
  * Reduce the scope of quantum_info in the PNG decoder to avoid a possible
    memory leak (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20522).
